[tool.poetry]
name = "feedbackfrontiers"
version = "0.1.0"
description = ""
authors = ["MeMartijn <martijn.schouten@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
pandas = "^2.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
